welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:6: error: type mismatch;
 found   : Any
 required: java.awt.Color
      setCouleurBrosse(motif(i-1))
                            ^Array2:11: error: type mismatch;
 found   : Any
 required: java.awt.Color
      setCouleurBrosse(motif(i - 1 + decalage))
                            ^Array2:31: error: type mismatch;
 found   : Array[java.awt.Color]
 required: Array[Any]
Note: java.awt.Color <: Any, but class Array is invariant in type T.
You may wish to investigate a wildcard type such as `_ <: Any`. (SLS 3.2.10)
    colonne(decalage, motif)
                      ^